--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                  maxlength="25"
                  minlength="2"
                  required
-                 class="setup-user-name" value="Синий Пендальф">
+                 class="setup-user-name"
+                 value="Синий Пендальф">
         </label>
       </div>
 
@@ -118,13 +119,13 @@
             </g>
           </svg>
         </div>
-        <input type="hidden" name="coat-color" value="rgb(101, 137, 164)">
-        <input type="hidden" name="eyes-color" value="black">
+        <input type="hidden" name="coat-color" id="coat-color" value="rgb(101, 137, 164)">
+        <input type="hidden" name="eyes-color" id="eyes-color" value="black">
       </div>
 
       <div class="setup-fireball-wrap">
         <div class="setup-fireball"></div>
-        <input type="hidden" name="fireball-color" value="#ee4830">
+        <input type="hidden" name="fireball-color" id="fireball-color" value="#ee4830">
       </div>
 
       <div class="setup-artifacts" dropzone="move">
